<resources>
    <string name="app_name">EconomyApp</string>
    <string name="interes_rate_converter">Interes Rate Converter</string>
    <string name="information">Information</string>
    <string name="conversor_de_tasas_de_interes">Conversor de tasas de interes</string>
    <string name="calculo_de_cuota">Calculos de cuotas</string>
    <string name="separador">Separador</string>
    <string name="calculo_de_anualidades">Calculo de anualidades</string>
    <string name="calculo_de_agradiente">Calculo de gradiente</string>
    <string name="icono_procentaje">Icono Procentaje</string>
    <string name="icono_grow_money">Icono grow money</string>
    <string name="icono_historial">Icono historial</string>
    <string name="payment_history_icon_by_icons8">Payment History icon by Icons8</string>
    <string name="historial_de_calculos">Historial de calculos</string>
    <string name="powered_by_didacticos_csj">Powered by Didacticos CSJ</string>
    <string name="link_icons"><a href="https://www.google.pl/">Icons provided by</a></string>
    <string name="vi_eta_moneda">Viñeta moneda</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="tasa_inicial">Tasa inicial</string>
    <string name="Tasa_final">Tasa final</string>
    <string name="divider">divider</string>
    <string name="periocidad">Periocidad</string>
    <string name="nominal_efectiva">(Nominal/Efectiva)</string>
    <string name="vencida_anticipada">(Vencida/Anticipada)</string>
    <string name="calcular">Calcular</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="economia">Economia</string>
    <string name="result">Resultado</string>
    <string name="show_cardview_final_rate">Show CardView Final Rate</string>
    <string name="show_cardview_intial_rate">Show CardView initial Rate</string>
    <string name="close_dialog">Close dialog</string>
    <string name="not_availaibe_yet">By the moment this feature is not working yet</string>
    <string name="rate">Tasa</string>
    <string name="textResult">El resultado de convertir el %s de interes %s %s a interes %s %s es de:</string>

    <string name="propmt_opcion">Ingrese una opción</string>
    <string name="propmt_period">Ingrese un periodo</string>

    <string-array name="efectiva_nominal">
        <item>Efectiva</item>
        <item>Nominal</item>
    </string-array>

    <string-array name="vencida_anticipada">
        <item>Vencida</item>
        <item>Anticipada</item>
    </string-array>

    <string-array name="periciocidad">
        <item>Mensual</item>
        <item>Bimestral</item>
        <item>Trimestral</item>
        <item>Semestral</item>
        <item>Anual</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fee_calculation">Calculo de cuota</string>
    <string name="fee_calculations">Calculo de cuotas</string>
    <string name="interest_rate">Tasa de interes</string>
    <string name="n_mero_de_cuotas">Número de cuotas</string>
    <string name="_0">0</string>
    <string name="monto_a_diferir">Monto a diferir</string>
    <string name="pagos_extraordinarios">Pagos extraordinarios</string>
    <string name="agregar">Agregar</string>
    <string name="N_periodo"># Periodo</string>
    <string name="valor">Valor</string>
    <string name="add_button">Add Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="reducci_n_de_tiempo">Reducción de tiempo</string>
    <string name="reducci_n_de_cuota">Reducción de cuota</string>
    <string name="tipo_de_calculo">Tipo de calculo</string>
    <string name="resultado">Resultado</string>
    <string name="mixto">Mixto</string>
</resources>
