<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_number_period_fee_calculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/N_periodo" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_amount_fee_calculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/image_btn_add_payment_item_fee_calculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_button"
                android:src="@drawable/add_32" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>